2003-02-22  ChipX86 <chipx86@chipx86.com>

	* gtetrinet.schemas.in: Add schema info. for timestamp pref.
	* src/config.c: Add config for timestamping partyline text.
	* src/config.h: Add config for timestamping partyline text.
	* src/dialogs.c: Add config for timestamping partyline text.
	* src/gtetrinet.c: Add config for timestamping partyline text.
	* src/partyline.c: Add timestamps if config is set.
	* src/partyline.h: Add config for timestamping partyline text.

2003-02-22  James Antill  <james@and.org>

	* src/config.c (config_loadtheme): If current theme has no name,
	revert to default.

	* src/fields.c (fields_init): If the current theme fails to load,
	change the preference.

2003-02-20  Jordi Mallach  <jordi@sindominio.net>

	* src/tetrinet.c (tetrinet_sendfield): Patch from Ian Zink with big
	optimizations.

2003-02-19  James Antill  <james@and.org>

	* src/partyline.c (textentry): Add ESC for "/list" parser when user
	types "/list".
	
	* src/misc.c (textbox_addtext): Fix attributes (bold, italic etc.
	were never being set).
	(textbox_addtext): Don't insert using tags if nothing changed, this
	seems to work around a bug when using LANG=en_US.UTF-8 gtetrinet. Don't
	ask me why.

2003-02-18  Jordi Mallach  <jordi@sindominio.net>

	* Makefile.am (INCLUDES): removed, not needed here.

2003-02-17  Dani Carbonell  <bocata@panete.net>

	* src/partyline.c: slightly modified the partyline UI. Added the
	ability to join channels by just double-clicking in the channel list.
	(partyline_page_new): added two informative labels.
	(channel_activated): new callback for the "row-activated" signal in
	the channel list.
	(partyline_joining_channel): new function to update the label that
	shows your current channel.
	
	* src/partyline.h: added the new function declaration.
	
	* src/tetrinet.c (tetrinet_inmessage): update the new channel label.

2003-02-15  Dani Carbonell  <bocata@panete.net>

	* TODO: updated.

2003-02-14  James Antill  <james@and.org>
